Добавить активацию пользователей и приглашения по ролям
